--- a/platforms/ios/www/index.html
+++ b/platforms/ios/www/index.html
@@ -37,6 +37,7 @@
             <button id="btnPlugin">Echo PLugin</button>
         </div>
         <script type="text/javascript" src="cordova.js"></script>
+          <script type="text/javascript" src="native-ui.js"></script>
         <script type="text/javascript" src="js/index.js"></script>
     </body>
 </html>
