--- a/www/index.html
+++ b/www/index.html
@@ -15,7 +15,7 @@
     <div class="app">
         <h1>NativeUI DEMO</h1>
 
-        <button id="btnPlugin">Call Plugin</button>
+        <button id="btnPlugin">Start NativeUI</button>
 
         <div id="screenLog"></div>
 
@@ -24,6 +24,7 @@
 
     <script type="text/javascript" src="cordova.js"></script>
     <script type="text/javascript" src="js/index.js"></script>
+     <script type="text/javascript" src="js/welcomeDemo.js"></script>
 </body>
 
 </html>
